--- a/.eslintrc
+++ b/.eslintrc
@@ -1,44 +1,23 @@
  {
 
-  "env": {
-
-    "browser": true,
-
-    "es2021": true,
-
-  },
-
   "extends": [
 
     "airbnb-base",
 
   ],
 
-  "overrides": [
-
-  ],
-
-  "parser": "@typescript-eslint/parser",
-
-  "parserOptions": {
-
-    "ecmaVersion": "latest",
-
-    "sourceType": "module",
-
-  },
-
-  "plugins": [
-
-    "react",
-
-    "@typescript-eslint",
-
-  ],
-
   "rules": {
 
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
+    "eol-last": 0,
 
-  },
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
+
+    "no-underscore-dangle": ["error", {
+
+      "allow": ["_id"]
+
+    }]
+
+  }
+
 }
