--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,8 @@
  {
+  "env": {
+    "node": true,
+    "es6": true
+  },
 
   "extends": [
 
@@ -6,11 +10,14 @@
 
   ],
 
+  "overrides": [
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+
   "rules": {
-
-    "eol-last": 0,
-
-    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 0 }],
 
     "no-underscore-dangle": ["error", {
 
